Base for home page

--- a/gAIn/src/app/home/home.component.html
+++ b/gAIn/src/app/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<div>
+  <body>
+    <h1>
+      <span style="color:#4CAF50">g</span>
+      <span style="color:#FF0000">AI</span>
+      <span style="color:#4CAF50">nz</span>
+    </h1><br><br>
+    <div>
+      <p>Click here to curate a personalized meal plan!</p>
+      <button class="button">Meal Plan</button><br><br>
+      <p>Click here to generate a personalized work out plan!</p>
+      <button class="button">Workout Plan</button>
+    </div>
+  </body>
+</div>
