--- a/gAIn/src/app/app.component.html
+++ b/gAIn/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-home></app-home>
+<nav>
+  <a routerLink="/home">Home</a>
+  <a routerLink="/fitnessform">Fitness Form</a>
+</nav>
+<router-outlet></router-outlet>
