edited dashboard to be more visually pleasing

--- a/gAIn/src/app/app.component.html
+++ b/gAIn/src/app/app.component.html
@@ -1,5 +1,11 @@
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
 <nav>
-  <a routerLink="/home">Home</a>
+<div class="topnav">
+  <a class="active" routerLink="/home">Home</a>
   <a routerLink="/fitnessform">Fitness Form</a>
+</div>
 </nav>
 <router-outlet></router-outlet>
