incorporated routing for meal plan page

--- a/gAIn/src/app/app.component.html
+++ b/gAIn/src/app/app.component.html
@@ -6,6 +6,7 @@
 <div class="topnav">
   <a class="active" routerLink="/home">Home</a>
   <a routerLink="/fitnessform">Fitness Form</a>
+  <a routerLink="/mealplan">Meal Plan</a>
 </div>
 </nav>
 <router-outlet></router-outlet>
