added in result page component

--- a/gAIn/src/app/home/home.component.html
+++ b/gAIn/src/app/home/home.component.html
@@ -7,9 +7,9 @@
     </h1><br><br>
     <div>
       <p>Click here to curate a personalized meal plan!</p>
-      <button class="button">Meal Plan</button><br><br>
+      <button class="button" (click)="mealButtonClk()">Meal Plan</button><br><br>
       <p>Click here to generate a personalized work out plan!</p>
-      <button class="button">Workout Plan</button>
+      <button class="button" (click)="fitnessButtonClk()">Fitness Plan</button>
     </div>
   </body>
 </div>
