--- a/gAIn/src/app/fitness-form/fitness-form.component.css
+++ b/gAIn/src/app/fitness-form/fitness-form.component.css
@@ -1,6 +1,20 @@
 h1{
   text-align: center;
+  color: #4CAF50;
 }
 label{
   font-size: large;
+}
+
+button{
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
