created api using espressJS integration of twilio and openai complete must set .env variables for openai and twilio to run

--- a/gAIn/src/app/mealplan/mealplan.component.html
+++ b/gAIn/src/app/mealplan/mealplan.component.html
@@ -69,7 +69,7 @@
     <!-- show input box to enter other option -->
     <div *ngIf="genderState">
       <form>
-        <input [(ngModel)]="gender" name="otherGender"/>
+        <input name="otherGender"/>
       </form>
     </div>
   </div>
