added a grey background

--- a/gAIn/src/app/fitness-form/fitness-form.component.html
+++ b/gAIn/src/app/fitness-form/fitness-form.component.html
@@ -1,6 +1,7 @@
-<h1>Let's make a fitness plan!</h1><br><br>
 
 <div id = "theForm">
+
+  <h2>Let's make a fitness plan!</h2>
   <div class = "skillsDev">
     <label >What skill level are you? </label>
 
