--- a/gAIn/src/app/mealplan/mealplan.component.css
+++ b/gAIn/src/app/mealplan/mealplan.component.css
@@ -1,4 +1,4 @@
-h3{
+h2{
   text-align: center;
   color: #4CAF50;
 }
@@ -13,6 +13,10 @@ button{
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
+}
+
+#uh{
+  background-color: lightgray;
 }
 
 
