--- a/gAIn/src/app/mealplan/mealplan.component.html
+++ b/gAIn/src/app/mealplan/mealplan.component.html
@@ -1,7 +1,7 @@
-<div class="meal-plan page">
-  <h3>
+<div id = "uh" class="meal-plan page">
+  <h2>
     Curate a Personal Meal Plan for the Week
-  </h3><br><br>
+  </h2><br><br>
 
   <div class="input-group mb-3">
     <!-- dietary restrictions -->
