--- a/gAIn/src/app/fitness-form/fitness-form.component.css
+++ b/gAIn/src/app/fitness-form/fitness-form.component.css
@@ -1,4 +1,4 @@
-h1{
+h2{
   text-align: center;
   color: #4CAF50;
 }
@@ -17,4 +17,8 @@ button{
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
+}
+
+#theForm{
+  background-color: lightgray;
 }
