--- a/gAIn/src/app/home/home.component.html
+++ b/gAIn/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <h1>
       <span style="color:#4CAF50">g</span>
       <span style="color:#FF0000">AI</span>
-      <span style="color:#4CAF50">nz</span>
+      <span style="color:#4CAF50">nzz</span>
     </h1><br><br>
     <div>
       <p>Click here to curate a personalized meal plan!</p>
