added goal to fitness form

--- a/gAIn/src/app/fitness-form/fitness-form.component.html
+++ b/gAIn/src/app/fitness-form/fitness-form.component.html
@@ -82,6 +82,11 @@
     <input type="text" id="healthConcerns" name="healthConcerns"><br><br>
   </div>
 
+  <div class = "phoneNumberDiv">
+    <label>What is your phone number? </label>
+    <input type="text" id="phoneNumber" name="phoneNumber"><br><br>
+  </div>
+
 <button type="button" (click)="submitClicked()">Submit</button>
 
 
