--- a/gAIn/src/app/mealplan/mealplan.component.html
+++ b/gAIn/src/app/mealplan/mealplan.component.html
@@ -80,6 +80,11 @@
     <input id = "healthConcerns" placeholder="Example: pcos, etc.">
   </form>
 
+  <div class = "phoneNumberDiv">
+    <label>What is your phone number? </label>
+    <input type="text" id="phoneNumber" name="phoneNumber"><br><br>
+  </div>
+
 
   <button type="submit" (click)="createPrompt()">
     Submit
